# aa-wizard-skillfarm

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: automated-checks.yml
testauth/: settings.py
testauth/settings/: base.py  local.py
wizardskillfarm/: __init__.py  apps.py  auth_hooks.py  models.py  tasks.py  urls.py  view_models.py  views.py
wizardskillfarm/migrations/: 0001_initial.py  0001_initialUpdate.py  0002_alter_accounttimes_expiry_alter_accounttimes_user_and_more.py  0003_alter_farmingskills_user.py  0004_farmingskills_skill_type.py  0005_alter_characterfarmingskill_skill_type.py  0006_alter_accounttimes_character.py  0007_alter_accounttimes_expiry.py  0008_dustybotskillqueuecheck.py  0009_alter_characterfarmingskill_skill_type_and_more.py
wizardskillfarm/templates/wizardskillfarm/: base.html  characters.html  headingmenu.html  index.html  omegatime.html
wizardskillfarm/templates/wizardskillfarm/settings/: characters.html  omegatime.html  skills.html
wizardskillfarm/tests/: test_tasks.py  test_view_account_time.py  test_view_characters.py  test_view_index.py
