[metadata]
name = aa_wizard_skillfarm
version = attr: wizardskillfarm.__version__
description = Wizard skill farm
long_description = file: README.md
long_description_content_type = text/markdown
author = Dusty Meg
author_email = aa_plugins@mmoore.uk
maintainer = Dusty Meg
maintainer_email = aa_plugins@mmoore.uk
license = GPL-3.0
license_files = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/Dusty-Meg/aa-wizard-skillfarm
keywords =
    allianceauth
    wizard
project_urls =
    Issue / Bug Reports = https://github.com/Dusty-Meg/aa-wizard-skillfarm/issues
    Changelog = https://github.com/Dusty-Meg/aa-wizard-skillfarm/blob/master/CHANGELOG.md

[options]
packages = find_namespace:
install_requires =
    allianceauth>=3.0.0
    allianceauth-corptools>=2.5.5
python_requires = ~=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
include = wizardskillfarm*

[options.package_data]
* = *
